# logo-gen

./: README.md  RESEARCH.md  pyproject.toml
research/: 01_image_models.md  02_comfyui_workflows.md  03_prompt_engineering.md  04_llm_prompt_enhancement.md  05_vector_conversion.md  06_text_rendering.md  07_style_control.md  08_multi_generation.md  09_open_source_tools.md  10_project_structure.md  11_api_integration.md  12_image_to_logo.md  13_background_removal.md  14_color_palette.md  15_design_principles.md  16_post_processing.md  17_interactive_chat.md  18_flux_deep_dive.md  19_svg_generation.md  20_architecture.md
src/logo_gen/: __init__.py  app.py  config.py  generator.py  postprocess.py  prompt_engine.py  upscaler.py
src/logo_gen/clients/: openrouter.py
