[project]
name = "logo-gen"
version = "0.1.0"
description = "AI-powered unique logo design generator"
readme = "README.md"
authors = [
    { name = "Duoquote", email = "16341937+Duoquote@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.10.0",
    "httpx>=0.28.1",
    "onnxruntime>=1.24.4",
    "openai>=2.30.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "rembg>=2.0.74",
    "spandrel>=0.4.2",
    "torch>=2.6.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
name = "pytorch-cuda"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }

[project.scripts]
logo-gen = "logo_gen.app:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
